--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,9 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([^\.]+)$ $1.html  [L]
 
+
+#301 permanent redirect all indexhtml to acceuilhtml
+RedirectPermanent index.html acceuil.html
 # 301 permanent redirect all .html to non .html
 RewriteCond %{THE_REQUEST} \.html
 RewriteRule ^(.*)\.html$ /$1 [R=301,L]
