--- a/.htaccess
+++ b/.htaccess
@@ -6,7 +6,7 @@ RewriteRule ^([^\.]+)$ $1.html  [L]
 
 
 #301 permanent redirect all indexhtml to acceuilhtml
-RedirectPermanent index.html acceuil.html
+RedirectPermanent /* /acceuil.html
 # 301 permanent redirect all .html to non .html
 RewriteCond %{THE_REQUEST} \.html
 RewriteRule ^(.*)\.html$ /$1 [R=301,L]
